--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "run-p dev:*",
+    "dev:frontend": "vite",
+    "dev:backend": "nodemon server/index.js",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest"
@@ -12,7 +14,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
@@ -25,6 +28,8 @@
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "npm-run-all": "^4.1.5",
+    "nodemon": "^3.0.2"
   }
 }
