--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "express": "^4.18.2",
     "prisma": "^6.14.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
