--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node src/index.ts",
+    "build": "echo \"build step not implemented\"",
+    "start": "node src/index.ts",
+    "db:migrate": "prisma migrate deploy",
+    "db:seed": "prisma db seed",
+    "test": "echo \"no tests\""
   },
   "keywords": [],
   "author": "",
