--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
