--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js",
     "db:migrate": "prisma migrate deploy",
     "db:seed": "prisma db seed",
-    "test": "echo \"no tests\""
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +19,19 @@
     "@prisma/client": "^6.14.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "@types/jest": "^29.5.11",
+    "supertest": "^6.3.4",
+    "@types/supertest": "^2.0.12",
+    "@types/bcryptjs": "^2.4.2"
   }
 }
