--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js",
     "db:migrate": "prisma migrate deploy",
     "db:seed": "prisma db seed",
-    "test": "echo \"no tests\""
+    "test": "node --test"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "supertest": "^6.3.4"
   }
 }
