--- a/backend/package.json
+++ b/backend/package.json
@@ -17,21 +17,23 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.14.0",
-    "bcryptjs": "^2.4.3"
+    "prisma": "^6.14.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "@types/jest": "^29.5.11",
-    "supertest": "^6.3.4",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^2.0.12",
-    "@types/bcryptjs": "^2.4.2"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
