--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,12 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.9",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.6",
