--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^7.1.2",
-    "vite-plugin-pwa": "^1.0.3"
+    "vite-plugin-pwa": "^1.0.3",
+    "rollup": "^4.21.0"
   }
 }
