--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "pino": "^9.9.0",
     "prisma": "^6.14.0",
     "zod": "^4.1.1"
   },
@@ -31,11 +32,11 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.9.2"
   }
 }
