--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.14.0",
@@ -32,11 +33,11 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.9.2"
   }
 }
